--- a/DesignPatterns/pom.xml
+++ b/DesignPatterns/pom.xml
@@ -8,13 +8,16 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
-
-    <packaging>pom</packaging>
-
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>DesignPatterns</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>club.yuit</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
