--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -17,7 +17,9 @@
         <module>../common</module>
         <module>../basic</module>
         <module>../thread</module>
+        <module>../DesignPatterns</module>
     </modules>
+
 
     <dependencies>
         <!--日志 start-->
@@ -65,8 +67,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
