--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>club.yuit</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>java-boot</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>../socket</module>
-        <module>../io</module>
-        <module>../common</module>
-        <module>../io</module>
-        <module>../common</module>
-        <module>../basic</module>
-        <module>../thread</module>
-        <module>../DesignPatterns</module>
+        <module>socket</module>
+        <module>/io</module>
+        <module>common</module>
+        <module>io</module>
+        <module>common</module>
+        <module>basic</module>
+        <module>thread</module>
+        <module>design-patterns</module>
     </modules>
 
 
