--- a/thread/pom.xml
+++ b/thread/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>club.yuit</groupId>
+    <parent>
+        <artifactId>java-boot</artifactId>
+        <groupId>club.yuit</groupId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
     <artifactId>thread</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
