--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
 
     <modelVersion>4.0.0</modelVersion>
